# TasksMCP

./: .env.example  .gitignore  INSTALL.md  INSTALL_CLAUDE.md  INSTALL_CURSOR.md  README.md  USER_GUIDE.md  docs.html  install-cursor-skills.py  pyproject.toml
.cursor/skills/install-errands/: SKILL.md
.cursor/skills/install-tasksmcp/: SKILL.md
.cursor/skills/use-instawork/: SKILL.md
backend/: DEPLOY_CLOUD_RUN.md  Dockerfile  main.py  requirements.txt
config-examples/: claude-desktop.errands.json  claude-desktop.tasks-mcp.json  cursor.mcp.json
npm/: index.js  package-lock.json  package.json
skills/install-tasksmcp/: SKILL.md
skills/use-instawork/: SKILL.md
tasks_mcp/: server.py
